--- a/src/composer.json
+++ b/src/composer.json
@@ -7,6 +7,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.3",
+        "bugrabozkurtt/inter-service-communication": "^1.0",
         "darkaonline/l5-swagger": "^8.6",
         "laravel/framework": "^11.31",
         "laravel/tinker": "^2.9",
